--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,9 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "supabase": "^2.39.2"
+    "supabase": "^2.39.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "supertest": "^7.1.4"
